--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 pointer-events: none;
 	margin-top: 0%;
 	margin-left: 8%;
-	margin-bottom: 0%;
+	margin-bottom: 1%;
 	font-size: 128px;
 	font-style: italic;
 	text-align:left;
@@ -45,7 +45,7 @@ pointer-events: none;
 animation: fade_in 0.5s linear;
 	font-family: "IBM Plex Mono", monospace;
 	font-weight: 400;
-	font-size:18px;
+	font-size:16px;
 	position:absolute;
 	background-color: #ece3cd;
 	margin:auto;
@@ -85,6 +85,7 @@ animation: fade_in 0.5s linear;
 	left:0%;
 	overflow:auto;
 	overflow-y:scroll;
+	height:90%;
 	padding-bottom:20%;
 }
 
