--- a/style.css
+++ b/style.css
@@ -85,7 +85,8 @@ animation: fade_in 0.5s linear;
 	left:0%;
 	overflow:auto;
 	overflow-y:scroll;
-	height:30%;
+	height:45%;
+	padding-right: 2%;
 	padding-top:0%;
 }
 
