--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ pointer-events: none;
 	margin-top: 0%;
 	margin-left: 8%;
 	margin-bottom: 1%;
+	padding-bottom: 2%;
 	font-size: 128px;
 	font-style: italic;
 	text-align:left;
@@ -85,7 +86,7 @@ animation: fade_in 0.5s linear;
 	left:0%;
 	overflow:auto;
 	overflow-y:scroll;
-	height:45%;
+	height:80%;
 	padding-right: 2%;
 	padding-top:0%;
 }
