--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ pointer-events: none;
 	margin-top: 0%;
 	margin-left: 8%;
 	margin-bottom: 1%;
-	padding-bottom: 5%;
+	padding-bottom: 32px;
 	font-size: 128px;
 	font-style: italic;
 	text-align:left;
