--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 pointer-events: none;
 	margin-top: 0%;
 	margin-left: 8%;
-	margin-bottom: 1%;
+	margin-bottom: 32px;
 	padding-bottom: 32px;
 	font-size: 128px;
 	font-style: italic;
