--- a/style.css
+++ b/style.css
@@ -22,14 +22,13 @@ body {
 pointer-events: none;
 	margin-top: 0%;
 	margin-left: 8%;
-	margin-bottom: 32px;
-	padding-bottom: 32px;
+	margin-bottom: 0%;
+	padding-bottom: 0%;
 	font-size: 128px;
 	font-style: italic;
 	text-align:left;
 	letter-spacing: 6px;
 	text-shadow: 8px 8px 0px #57b7ff;
-	border-bottom: 2px solid black;
 }
 
 .main{
@@ -53,7 +52,7 @@ animation: fade_in 0.5s linear;
 	margin:auto;
 	text-align:justify;
 	padding-left:0%;
-	padding-top: 1%;
+	padding-top: 2%;
 	webkit-user-select: none; /* Safari */
   moz-user-select: none;    /* Firefox */
   ms-user-select: none;     /* IE 10+ */
